--- a/src/Components/CSS/HeroStyle.css
+++ b/src/Components/CSS/HeroStyle.css
@@ -1,20 +1,20 @@
-.hero{
+.hero {
     width: 100%;
     height: 100vh;
     position: relative;
 }
 
-.hero-mid{
+.hero-mid {
     width: 100%;
     height: 70vh;
     position: relative;
 }
 
-.hero-mid h1{
+.hero-mid h1 {
     padding-top: 4rem !important;
 }
 
-img{
+img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -26,13 +26,13 @@ img{
     left: 27%;
     transform: translate(-50%, -50%);
     width: 50%;
-    background-color: #6B3CC9; /* Set background color */
-    padding: 20px; /* Add padding */
-    border-radius: 10px; /* Add border radius */
+    background-color: #6B3CC9;
+    padding: 20px;
+    border-radius: 10px;
     background-image: linear-gradient(135deg, #4DCA79, #1CBDDD);
 }
 
-.hero-text h1{
+.hero-text h1 {
     font-size: 3rem;
     font-weight: 900;
     background: #fff;
@@ -40,13 +40,13 @@ img{
     -webkit-text-fill-color: transparent;
 }
 
-.hero-text p{
+.hero-text p {
     font-size: 1.5rem;
-    color: #fff;
+    color: #000000;
     padding: 0.5rem 0 2rem;
 }
 
-.hero-text .show{
+.hero-text .show {
     text-decoration: none;
     padding: 1rem 2rem;
     background: #F28D35;
@@ -57,19 +57,26 @@ img{
     color: #fcfcfc;
 }
 
-@media screen and (max-width:555px) {
-    .hero-text h1{
+@media screen and (max-width: 555px) {
+    .hero-text-container {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80%;
+    }
+
+    .hero-text h1 {
+        font-size: 2rem;
         padding: 10px 20px;
     }
 
-    .hero-text p{
+    .hero-text p {
         font-size: 1.1rem;
         padding: 0 0 2rem 0;
     }
 
-    .hero-text .show{
+    .hero-text .show {
         padding: 0.6rem 1.1rem;
-        border-radius: 6px;
         font-size: 1rem;
     }
 }
