--- a/src/Components/CSS/TripStyle.css
+++ b/src/Components/CSS/TripStyle.css
@@ -51,3 +51,20 @@
     font-size: 1.3rem;
     padding: .9rem 0 .2rem 0;
 }
+
+
+.tripdata {
+    /* Your existing styles */
+}
+
+.question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 200px; 
+}
+
+.icon-wrapper {
+    cursor: pointer;
+    margin-right: 300px; 
+}
